<resources>
    <string name="app_name">Calculator</string>
    <string name="any_calc">25+34</string>
    <string name="mod">%</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="plus_or_minus">+/-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="clear">c</string>
    <string name="point">.</string>
    <string name="equal">=</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

</resources>