<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/any_calc"
        android:textColor="@color/white"
        android:textSize="@android:dimen/notification_large_icon_height"
        android:layout_margin="16dp"></EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/mod"
                android:layout_margin="8dp"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/white"></Button>
            <Button
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey"></Button>
            <Button
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey"></Button>
            <Button
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey"></Button>
            <Button
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey"></Button>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/left_parenthesis"
                android:layout_margin="8dp"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/white"></Button>
            <Button
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey"></Button>
            <Button
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey"></Button>
            <Button
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey"></Button>
            <Button
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey"></Button>

        </LinearLayout><LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/right_parenthesis"
            android:layout_margin="8dp"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/white"></Button>
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"></Button>
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"></Button>
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"></Button>
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/point"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"></Button>

    </LinearLayout><LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/plus_or_minus"
            android:layout_margin="8dp"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/orange"></Button>
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"></Button>
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"></Button>

        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/equal"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"></Button>

    </LinearLayout>




    </LinearLayout>
</LinearLayout>